--- a/templates/index.html
+++ b/templates/index.html
@@ -9,6 +9,6 @@
 </head>
 <body>
     <div></div>
-    <a href="post" class="waves-effect waves-light btn-large">Post something!</a>
+    <a href="postdiscussion" class="waves-effect waves-light btn-large">Post something!</a>
 </body>
 </html>
