--- a/templates/post.html
+++ b/templates/post.html
@@ -7,24 +7,22 @@
 </head>
 <body>
 <div class="row">
-<form class="col s12">
+<form class="col s12" method="POST">
   <h2 class="header">Post a discussion</h2>
   <div class="row">
     <div class="input-field col s12">
-      <textarea id="textarea1" class="materialize-textarea"></textarea>
-      <label for="textarea1">Title</label>
+      <textarea id="title" class="materialize-textarea"></textarea>
+      <label for="title">Title</label>
     </div>
   </div>
-</form>
-</div>
-<div class="row">
-<form class="col s12">
   <div class="row">
     <div class="input-field col s12">
-      <textarea id="textarea1" class="materialize-textarea"></textarea>
-      <label for="textarea1">Text</label>
+      <textarea id="text" class="materialize-textarea"></textarea>
+      <label for="text">Text</label>
     </div>
-  </div>
+</div>
+  <button class="btn waves-effect waves-light" type="submit">Submit
+  </button>
 </form>
 </div>
 </body>
