--- a/templates/index.html
+++ b/templates/index.html
@@ -6,6 +6,7 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
+  <script src="../static/script.js"></script>
   <title>Reddit with Flask</title>
 </head>
 <body>
@@ -16,9 +17,9 @@
           <div class="section">
               <div class="row">
                 <div class="col s1">
-                  <i class="small material-icons" id={{post['id']}}>arrow_upward</i>
+                  <i id={{post['post_id']}} onclick="upvote(this.id)" class="small material-icons">arrow_upward</i>
                   <p>asda</p>
-                  <i class="small material-icons" id={{post['id']}}>arrow_downward</i>
+                  <i id={{post['post_id']}} onclick="downvote(this.id)" class="small material-icons">arrow_downward</i>
                 </div>
                 <div class="col s11">
                   <h5>{{ post['title'] }}</h5>
