--- a/templates/index.html
+++ b/templates/index.html
@@ -8,7 +8,13 @@
     <title>Reddit with Flask</title>
 </head>
 <body>
-    <div></div>
-    <a href="postdiscussion" class="waves-effect waves-light btn-large">Post something!</a>
+    <div class="container">
+        <div class="row">
+            <div class="col s8">hello</div>
+            <div class="col s3">
+                <a href="postdiscussion" class="waves-effect waves-light btn-large">Post something!</a>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
