--- a/templates/index.html
+++ b/templates/index.html
@@ -10,7 +10,15 @@
 <body>
     <div class="container">
         <div class="row">
-            <div class="col s8">hello</div>
+            <div class="col s8">
+                {% for post in posts %}
+                  <div class="section">
+                      <h5>{{ post['title'] }}</h5>
+                      <p>{{ post['text'] }}</p>
+                  </div>
+                  <div class="divider"></div>
+                 {% endfor %}
+            </div>
             <div class="col s3">
                 <a href="postdiscussion" class="waves-effect waves-light btn-large">Post something!</a>
             </div>
