added non functional upvote buttons

--- a/templates/comments.html
+++ b/templates/comments.html
@@ -21,6 +21,16 @@
                     <div class="divider"></div>
                </div>
             <div class="divider"></div>
+            <div class="row">
+              <form class="col s12">
+                <div class="row">
+                  <div class="input-field col s12">
+                    <textarea id="textarea1" class="materialize-textarea"></textarea>
+                    <label for="textarea1">Comment something!</label>
+                  </div>
+                </div>
+              </form>
+            </div>
             </div>
             <div class="col s3">
                 <div class="section">
