--- a/templates/comments.html
+++ b/templates/comments.html
@@ -8,36 +8,38 @@
     <title>Reddit with Flask</title>
 </head>
 <body>
-    <div class="container">
-        <div class="row">
-            <div class="col s8">
-               <div class="section">
-                   <h5>{{ post_dict['title'] }}</h5>
-                   <p>{{ post_dict['text'] }}</p>
-                    <div class="divider"></div>
-               </div>
-               <div class="section">
-                   <p>blabla</p>
-                    <div class="divider"></div>
-               </div>
-            <div class="divider"></div>
-            <div class="row">
-              <form class="col s12">
-                <div class="row">
-                  <div class="input-field col s12">
-                    <textarea id="textarea1" class="materialize-textarea"></textarea>
-                    <label for="textarea1">Comment something!</label>
-                  </div>
-                </div>
-              </form>
-            </div>
-            </div>
-            <div class="col s3">
-                <div class="section">
-                    <a href="postdiscussion" class="waves-effect waves-light btn-large">Post something!</a>
-                </div>
-            </div>
+  <div class="container">
+    <div class="row">
+      <div class="col s8">
+        <div class="section">
+          <h5>{{ post_dict['title'] }}</h5>
+          <p>{{ post_dict['text'] }}</p>
+          <div class="divider"></div>
         </div>
+        <div class="row">
+          <form class="col s12">
+            <div class="row">
+              <div class="input-field col s12">
+                <textarea id="textarea1" class="materialize-textarea"></textarea>
+                <label for="textarea1">Comment something!</label>
+              </div>
+              <div>
+                <button class="btn waves-effect waves-light" type="submit" name="action">
+                  save
+                </button>
+              </div>
+            </div>
+          </form>
+        </div>
+       </div>
+       <div class="col s3">
+        <div class="section">
+          <a href="postdiscussion" class="waves-effect waves-light btn-large">
+            Post something!
+          </a>
+        </div>
+      </div>
     </div>
+  </div>
 </body>
 </html>
