--- a/templates/comments.html
+++ b/templates/comments.html
@@ -17,16 +17,18 @@
           <div class="divider"></div>
         </div>
         <div class="row">
-          <form class="col s12">
+          <form class="col s12" method='POST'>
             <div class="row">
-              <div class="input-field col s12">
-                <textarea id="textarea1" class="materialize-textarea"></textarea>
-                <label for="textarea1">Comment something!</label>
-              </div>
-              <div>
-                <button class="btn waves-effect waves-light" type="submit" name="action">
-                  save
-                </button>
+              <form>
+                <div class="input-field col s12">
+                  <textarea name="comment" class="materialize-textarea"></textarea>
+                  <label for="comment">Comment something!</label>
+                </div>
+                <div>
+                  <button class="btn waves-effect waves-light" type="submit" name="action">
+                    save
+                  </button>
+                </form>
               </div>
             </div>
           </form>
