--- a/templates/post.html
+++ b/templates/post.html
@@ -1,9 +1,8 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
-    <title>Post</title>
+  {% include 'header.html' %}
+  <title>Post</title>
 </head>
 <body>
 <div class="container">
