oops accidentally removed a link

--- a/templates/index.html
+++ b/templates/index.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8">
   {% include 'header.html' %}
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <script src="../static/script.js"></script>
   <title>Reddit with Flask</title>
 </head>
