--- a/templates/index.html
+++ b/templates/index.html
@@ -14,12 +14,14 @@
         {% for id, post in posts.items() %}
           <div class="section">
               <div class="row">
-                <div class="col s1">
-                  <i id={{post['post_id']}} onclick="upvote(this.id)" class="small material-icons">arrow_upward</i>
-                  <p>{{post['points']}}</p>
-                  <i id={{post['post_id']}} onclick="downvote(this.id)" class="small material-icons">arrow_downward</i>
+                <div class="col s2">
+                  <div class="center-align">
+                    <i id={{post['post_id']}} onclick="upvote(this.id)" class="small material-icons">arrow_upward</i>
+                    <p class="center-align">{{post['points']}}</p>
+                    <i id={{post['post_id']}} onclick="downvote(this.id)" class="small material-icons">arrow_downward</i>
+                  </div>
                 </div>
-                <div class="col s11">
+                <div class="col s10">
                   <h5>{{ post['title'] }}</h5>
                   <p>{{ post['text'] }}</p>
                   <a href="comments/{{post['post_id']}}">
