--- a/templates/index.html
+++ b/templates/index.html
@@ -18,7 +18,7 @@
               <div class="row">
                 <div class="col s1">
                   <i id={{post['post_id']}} onclick="upvote(this.id)" class="small material-icons">arrow_upward</i>
-                  <p>{{post['points']}}</p>
+                  <p id=p{{post['post_id']}}>{{post['points']}}</p>
                   <i id={{post['post_id']}} onclick="downvote(this.id)" class="small material-icons">arrow_downward</i>
                 </div>
                 <div class="col s11">
