made stuff look good

--- a/templates/comments.html
+++ b/templates/comments.html
@@ -10,32 +10,26 @@
       <div class="col s8">
         <div class="section">
           <h5>{{ post_dict['title'] }}</h5>
-          <p>{{ post_dict['text'] }}</p>
-          <div class="divider"></div>
+          <blockquote>{{ post_dict['text'] }}</blockquote>
         </div>
         <div class="row">
-          <form class="col s12" action="/comments/{{post_id}}/postcomment" method='POST'>
-            <div class="row">
-              <form>
-                <div class="input-field col s12">
-                  <textarea name="comment" class="materialize-textarea"></textarea>
-                  <label for="comment">Comment something!</label>
-                </div>
-                <div>
-                  <button class="btn waves-effect waves-light" type="submit" name="action">
-                    save
-                  </button>
-                </form>
-              </div>
+          <form action="/comments/{{post_id}}/postcomment" method='POST'>
+            <div class="col s10 input-field">
+              <textarea name="comment" class="materialize-textarea"></textarea>
+              <label for="comment">Comment something!</label>
+            </div>
+            <div class="input-field right">
+              <button class="btn waves-effect waves-light" type="submit" name="action">
+                save
+              </button>
             </div>
           </form>
-          {% for comment in post_dict['comments'] %}
-              <div class="section">
-                <p>{{ comment }}</p>
-              </div>
-              <div class="divider"></div>
-          {% endfor %}
         </div>
+        {% for comment in post_dict['comments'] %}
+            <div class="section card-panel">
+              <p>{{ comment }}</p>
+            </div>
+        {% endfor %}
        </div>
        <div class="col s3">
         <div class="section">
