--- a/templates/comments.html
+++ b/templates/comments.html
@@ -5,6 +5,7 @@
   <title>Reddit with Flask</title>
 </head>
 <body>
+  {% include 'nav.html' %}
   <div class="container">
     <div class="row">
       <div class="col s8">
