--- a/templates/index.html
+++ b/templates/index.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <meta charset="UTF-8">
   {% include 'header.html' %}
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <script src="../static/script.js"></script>
   <title>Reddit with Flask</title>
 </head>
 <body>
+  {% include 'nav.html' %}
   <div class="container">
     <div class="row">
       <div class="col s8">
