changed json format

--- a/templates/comments.html
+++ b/templates/comments.html
@@ -33,16 +33,16 @@
             </div>
           </form>
           {% for comment in post_dict['comments'] %}
-            <div class="section">
-              <p>{{ comment }}</p>
-            </div>
-            <div class="divider"></div>
+              <div class="section">
+                <p>{{ comment }}</p>
+              </div>
+              <div class="divider"></div>
           {% endfor %}
         </div>
        </div>
        <div class="col s3">
         <div class="section">
-          <a href="postdiscussion" class="waves-effect waves-light btn-large">
+          <a href="/postdiscussion" class="waves-effect waves-light btn-large">
             Post something!
           </a>
         </div>
