--- a/templates/index.html
+++ b/templates/index.html
@@ -13,7 +13,7 @@
   <div class="container">
     <div class="row">
       <div class="col s8">
-        {% for post in posts %}
+        {% for id, post in posts.items() %}
           <div class="section">
               <div class="row">
                 <div class="col s1">
@@ -36,7 +36,7 @@
       <div class="divider"></div>
       <div class="col s3">
         <div class="section">
-          <a href="postdiscussion" class="waves-effect waves-light btn-large">Post something!</a>
+          <a href="/postdiscussion" class="waves-effect waves-light btn-large">Post something!</a>
         </div>
       </div>
     </div>
