--- a/templates/post.html
+++ b/templates/post.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html>
 <head>
-  {% include 'header.html' %}
+  <!-- TODO: include header -->
   <title>Post</title>
 </head>
 <body>
-  {% include 'nav.html' %}
+  <!-- TODO: include nav -->
   <div class="container">
-    <form class="col s12" action="/post" method="POST">
+    <form class="col s12" action="route here!!!" method="POST">
       <h2 class="header light-blue-text">Post a discussion</h2>
       <div class="row">
         <div class="input-field col s12">
