--- a/templates/index.html
+++ b/templates/index.html
@@ -1,37 +1,37 @@
 <!DOCTYPE html>
 <html>
 <head>
-  {% include 'header.html' %}
+  <!-- TODO: include header -->
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <script src="../static/script.js"></script>
   <title>Reddit with Flask</title>
 </head>
 <body>
-  {% include 'nav.html' %}
+  <!-- TODO: include nav -->
   <div class="container">
     <div class="row">
       <div class="col s8">
-        {% for id, post in posts.items() %}
+        <!-- TODO: loop through items in posts -->
           <div class="section">
               <div class="row">
                 <div class="col s2">
                   <div class="center-align">
                     <i id={{post['post_id']}} onclick="upvote(this.id)" class="small material-icons">arrow_upward</i>
-                    <p id=p{{post['post_id']}} class="center-align">{{post['points']}}</p>
+                    <p id=p{{post['post_id']}} class="center-align"><!-- TODO: post points --></p>
                     <i id={{post['post_id']}} onclick="downvote(this.id)" class="small material-icons">arrow_downward</i>
                   </div>
                 </div>
                 <div class="col s10">
-                  <h5>{{ post['title'] }}</h5>
-                  <blockquote>{{ post['text'] }}</blockquote>
-                  <a href="comments/{{post['post_id']}}">
+                  <h5><!-- TODO: post title --></h5>
+                  <blockquote><!-- TODO: post text --></blockquote>
+                  <a href="comments/variable path here!!!!!!!!!!">
                       {{ post['comments']|length }} comments
                   </a>
                 </div>
               </div>
               <div class="divider"></div>
           </div>
-        {% endfor %}
+        <!-- endloop -->
       </div>
       <div class="col s3">
         <div class="section">
