removed more stuff

--- a/templates/comments.html
+++ b/templates/comments.html
@@ -28,6 +28,7 @@
         </div>
         <!-- TODO: loop through comments in post_dict -->
             <div class="section card-panel">
+              <!-- TODO: comment -->
               <p></p>
             </div>
        </div>
