--- a/templates/index.html
+++ b/templates/index.html
@@ -24,7 +24,7 @@
                 <div class="col s10">
                   <h5><!-- TODO: post title --></h5>
                   <blockquote><!-- TODO: post text --></blockquote>
-                  <a href="comments/variable path here!!!!!!!!!!">
+                  <a href="comments/!!!!variable path here!!!!!!!!!!">
                       {{ post['comments']|length }} comments
                   </a>
                 </div>
