commented in jinja

--- a/templates/index.html
+++ b/templates/index.html
@@ -16,16 +16,16 @@
               <div class="row">
                 <div class="col s2">
                   <div class="center-align">
-                    <i id={{post['post_id']}} onclick="upvote(this.id)" class="small material-icons">arrow_upward</i>
-                    <p id=p{{post['post_id']}} class="center-align"><!-- TODO: post points --></p>
-                    <i id={{post['post_id']}} onclick="downvote(this.id)" class="small material-icons">arrow_downward</i>
+                    <i id={#TODO: add post id#} onclick="upvote(this.id)" class="small material-icons">arrow_upward</i>
+                    <p id=p{#p TODO: add post id#} class="center-align">{# TODO: post points #}</p>
+                    <i id={#TODO: add post id#} onclick="downvote(this.id)" class="small material-icons">arrow_downward</i>
                   </div>
                 </div>
                 <div class="col s10">
                   <h5><!-- TODO: post title --></h5>
                   <blockquote><!-- TODO: post text --></blockquote>
                   <a href="comments/!!!!variable path here!!!!!!!!!!">
-                      {{ post['comments']|length }} comments
+                    <!-- TODO: print how many comments -->
                   </a>
                 </div>
               </div>
